able to save sdp and answer to the rtc pool and able to update the exchange_state
